agrado contenido adicional del  blog en rama master

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,7 +1,7 @@
 body{
     color: #770644; 
     text-align: center;
-    font-family: "Arial";
+    font-family: "Curier";
     margin:2;
     font-size:16;
     padding: 0;
